[gd_scene load_steps=6 format=3 uid="uid://bong6m2hay26s"]

[ext_resource type="Texture2D" uid="uid://dx35smqvtudka" path="res://Assets/Art/ball.png" id="1_j8ro8"]
[ext_resource type="Script" path="res://Scripts/ball.gd" id="1_mmatu"]
[ext_resource type="AudioStream" uid="uid://pn88vumuw658" path="res://Assets/Audio/Pop.ogg" id="3_xqchl"]
[ext_resource type="AudioStream" uid="uid://cykaiqnn6feio" path="res://Assets/Audio/retro_die_01.ogg" id="4_rah2o"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lgt3j"]
radius = 13.0

[node name="Ball" type="Area2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_mmatu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_j8ro8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_lgt3j")

[node name="Hit_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_xqchl")
volume_db = -20.0
pitch_scale = 3.5

[node name="Death_Sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_rah2o")
volume_db = -20.0
pitch_scale = 1.49

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
